<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.savaalkaro.LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idTILUserName"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/enter_email_address"
        android:textColorHint="@color/black"
        android:padding="5dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idEDTUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idTILPassword"
        android:layout_below="@id/idTILUserName"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/enter_password"
        android:textColorHint="@color/black"
        android:padding="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idEdtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idTILPassword"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:background="#F5E609"
        android:text="@string/LOGIN"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/idTVRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/buttonLogin"
        android:layout_marginBottom="-46dp"
        android:gravity="center"
        android:text="@string/new_user_register_here"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#0E0E0E"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        tools:ignore="AllCaps" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_back"
        android:visibility="gone"
        android:id="@+id/PBLoading">

    </ProgressBar>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTVRegister"
        android:layout_marginTop="60dp"
        android:layout_centerInParent="true"
        app:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal"
        android:contentDescription="@string/Todo" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/light"
        android:contentDescription="@string/todo" />


</RelativeLayout>